--- a/public/gallery.html
+++ b/public/gallery.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>4flickrAjaxLoop.html</title>
+<title>gallery.html</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
     
     <h3>Live demo</h3>
     <!-- Flickr API global variables -->
-    <script src="../credentials.js"></script>
+    <script src="shared/credentials.js"></script>
     <!-- jQuery library -->
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <!-- Page specic code -->
