--- a/public/gallery.html
+++ b/public/gallery.html
@@ -24,6 +24,7 @@
     <h3>Live demo</h3>
     <!-- Flickr API global variables -->
     <script src="shared/credentials.js"></script>
+    <script src="shared/flickr.js"></script>
     <!-- jQuery library -->
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <!-- Page specic code -->
@@ -38,18 +39,13 @@
 				"nojsoncallback": 1
 			},
 			"success": function (response) {
-				// no jQuery, pls use classic JavaScript
-				var i,
-					photos = response.photos.photo, // array, learned from debugging the response structure
-					photo,
-					photoSrc,
-					len = photos.length;
-				for (i = 0; i < len; i++) {
-					photo = photos[i];
-					// https://farm{farm-id}.staticflickr.com/{server-id}/{id}_{secret}.jpg
-					photoSrc = "https://farm" + photo.farm + ".staticflickr.com/" + photo.server + "/" + photo.id + "_" + photo.secret + ".jpg";
-					$('body').append('<img src="' + photoSrc + '">');
-				}
+				var photoSrc = createJpgPath(response.photos.photo),
+					html = "";
+				$.each(photoSrc, function (i, src) {
+					html += '<img src="' + src + '">';
+				});
+				
+				$('body').append(html);
 			}
 		});
 	</script>
