--- a/public/myflickr.html
+++ b/public/myflickr.html
@@ -35,11 +35,11 @@
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <!-- Page specic code -->
     <script>
-		myflickrOptions.qs.api_key = credentials.flickr.api_key;
-		myflickrOptions.qs.user_id = credentials.flickr.user_id;
+		myflickrOptions.data.api_key = credentials.flickr.api_key;
+		myflickrOptions.data.user_id = credentials.flickr.user_id;
 		$.ajax({
 			"url": myflickrOptions.url,
-			"data": myflickrOptions.qs,
+			"data": myflickrOptions.data,
 			"success": function (response) {
 				var html = '';
 					photoSrc = createJpgPath(response.photos.photo);
