--- a/public/map.html
+++ b/public/map.html
@@ -30,10 +30,22 @@
     <script src="map/mxn.js?(leaflet)"></script>
     <!-- Page specific code -->
     <script>
-		var map = new mxn.Mapstraction('mapBox', 'leaflet'); 
-		var latlon = new mxn.LatLonPoint(51.50733, -0.12769);
-
-		map.setCenterAndZoom(latlon, 10);
+	// todo inclass centre and zoom on VanArts
+		var map = new mxn.Mapstraction('mapBox', 'leaflet'),
+			locations = {
+				london: {
+					lat: 51.50733,
+					lon: -0.12769,
+					zoom: 10
+				},
+				vancouver: {
+					lat: 49.25,
+					lon: -123.1,
+					zoom: 17
+				}
+			},
+			van = locations.vancouver;
+		map.setCenterAndZoom(new mxn.LatLonPoint(van.lat, van.lon), van.zoom);
 	</script>
 </body>
 </html>
